--- a/color-randomizer/style.css
+++ b/color-randomizer/style.css
@@ -6,7 +6,7 @@ body {
 
 .nav-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-color: #c7def5;
     border-bottom: thin solid #000;
